fix align of buttons portfolio page

--- a/app/assets/stylesheets/paralax.scss
+++ b/app/assets/stylesheets/paralax.scss
@@ -1491,6 +1491,7 @@ body {
       justify-content: center;
       align-items: center;
       margin-right: 1.5vh;
+      margin-bottom: 1vh;
       padding: 1vh 3vh;
       min-width: 15vh;
       color: rgba(255, 255, 255, 0.5);
